--- a/bentorneos/index.html
+++ b/bentorneos/index.html
@@ -1,119 +1,264 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestor de Torneos</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Gestor de Torneos</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #f4f6f8;
+      margin: 0;
+      padding: 0;
+      color: #333;
+    }
 
-    <!-- Incluir la librería MermaidJS para diagramas de bracket -->
-    <script src="https://cdn.jsdelivr.net/npm/mermaid@10.6.1/dist/mermaid.min.js"></script>
-    <script>
-        // Inicializar MermaidJS cuando la página esté lista
-        document.addEventListener('DOMContentLoaded', () => {
-            if (typeof mermaid !== 'undefined') {
-                // Configuración recomendada para inicialización
-                mermaid.initialize({
-                    startOnLoad: true, // Carga automáticamente los gráficos con la clase 'mermaid'
-                    theme: 'default'   // Tema por defecto
-                 });
-            } else {
-                console.error("La librería Mermaid no se ha cargado correctamente.");
-            }
-        });
-    </script>
+    header {
+      background-color: #005fcc;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+
+    main {
+      max-width: 900px;
+      margin: auto;
+      padding: 1rem;
+    }
+
+    h2 {
+      color: #005fcc;
+      margin-top: 2rem;
+    }
+
+    input, button {
+      font-size: 1rem;
+      padding: 0.5rem;
+      margin: 0.5rem 0.5rem 0.5rem 0;
+    }
+
+    .seccion {
+      margin-bottom: 2rem;
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 1.5rem;
+    }
+
+    .tabla {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 1rem;
+    }
+
+    .tabla th, .tabla td {
+      border: 1px solid #ccc;
+      padding: 0.5rem;
+      text-align: center;
+    }
+
+    .match {
+      margin: 0.5rem 0;
+    }
+
+    .bracket {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2rem;
+      margin-top: 2rem;
+    }
+
+    .ronda {
+      flex: 1;
+    }
+
+    .ronda h3 {
+      text-align: center;
+      margin-bottom: 1rem;
+    }
+
+    .box {
+      background: white;
+      border: 1px solid #ccc;
+      padding: 0.5rem;
+      margin: 0.5rem;
+      text-align: center;
+    }
+
+    .ganador {
+      background: #c8e6c9;
+      border-color: #4caf50;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>🎮 Gestor de Torneos 🎮</h1>
+  <header>
+    <h1>Gestor de Torneos</h1>
+  </header>
+  <main>
+    <section class="seccion" id="inscripcion">
+      <h2>1. Inscripción</h2>
+      <input type="text" id="nombre" placeholder="Nombre del participante"/>
+      <button onclick="agregarParticipante()">Agregar</button>
+      <ul id="listaParticipantes"></ul>
+      <button onclick="iniciarGrupos()" id="btnIniciarGrupos" disabled>Iniciar Fase de Grupos</button>
+    </section>
 
-        <!-- Sección de Control Global -->
-        <div class="control-section">
-            <button id="btnNuevoTorneo">♻️ Nuevo Torneo</button>
-        </div>
+    <section class="seccion" id="grupos" style="display:none;">
+      <h2>2. Fase de Grupos</h2>
+      <div id="partidos"></div>
+      <h3>Tabla de Posiciones</h3>
+      <table class="tabla">
+        <thead>
+          <tr><th>#</th><th>Nombre</th><th>Pts</th><th>V</th><th>D</th></tr>
+        </thead>
+        <tbody id="tablaPosiciones"></tbody>
+      </table>
+      <button onclick="iniciarEliminatorias()" id="btnEliminatorias" disabled>Iniciar Eliminatorias</button>
+    </section>
 
-        <!-- Fase 1: Inscripción -->
-        <section id="inscripcion-section">
-            <h2>1. Inscripción de Participantes</h2>
-            <div class="input-group">
-                <label for="nombreParticipante">Nombre:</label>
-                <input type="text" id="nombreParticipante" placeholder="Introduce nombre">
-                <button id="btnAgregarParticipante">✚ Agregar</button>
-            </div>
-            <h3>Participantes Inscritos:</h3>
-            <ul id="listaParticipantes">
-                <!-- Los participantes se añadirán aquí dinámicamente por JavaScript -->
-                <li>No hay participantes inscritos todavía.</li>
-            </ul>
-            <!-- Botón habilitado dinámicamente por JS -->
-            <button id="btnIniciarRoundRobin" disabled>▶ Iniciar Fase de Grupos</button>
-        </section>
+    <section class="seccion" id="eliminatorias" style="display:none;">
+      <h2>3. Eliminación Directa</h2>
+      <div class="bracket" id="bracket"></div>
+    </section>
+  </main>
 
-        <!-- Fase 2: Round Robin (oculta inicialmente) -->
-        <section id="round-robin-section" class="hidden">
-            <h2>2. Fase de Grupos (Todos contra Todos)</h2>
-            <div class="content-wrapper">
-                <div class="matches-section">
-                    <h3>Partidos</h3>
-                    <div id="partidosRoundRobin">
-                        <!-- Los partidos del Round Robin se mostrarán aquí -->
-                    </div>
-                    <!-- Botón habilitado dinámicamente por JS -->
-                    <button id="btnIniciarBracket" disabled>▶ Iniciar Fase de Eliminatorias</button>
-                </div>
-                <div class="standings-section">
-                    <h3>Tabla de Posiciones</h3>
-                    <table id="tablaPosiciones">
-                        <thead>
-                            <tr>
-                                <th>#</th>
-                                <th>Nombre</th>
-                                <th>Puntos</th>
-                                <th>V</th>
-                                <th>D</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <!-- La tabla se llenará aquí dinámicamente por JavaScript -->
-                            <tr>
-                                <td colspan="5">Generando tabla...</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </section>
+  <script>
+    const participantes = [];
+    const resultados = {};
+    let partidos = [];
+    let clasificados = [];
 
-        <!-- Fase 3: Bracket (oculta inicialmente) -->
-        <section id="bracket-section" class="hidden">
-            <h2>3. Bracket de Eliminatorias</h2>
-            
-            <!-- Contenedor para la visualización estática del bracket con Mermaid -->
-            <div class="bracket-container">
-                <div id="bracketDisplay">
-                    <!-- Mermaid generará su salida aquí -->
-                    <p>Generando el bracket...</p>
-                </div>
-            </div>
-            
-            <!-- Nueva Sección: Controles para partidos pendientes del Bracket -->
-            <!-- Oculta por defecto y se muestra cuando hay partidos pendientes -->
-            <div id="bracket-controls-section" class="hidden">
-                <h3>Partidos Pendientes del Bracket:</h3>
-                <div id="pendingBracketMatches">
-                    <!-- Los partidos pendientes y sus controles (selects, botones) se cargarán aquí -->
-                </div>
-            </div>
+    function agregarParticipante() {
+      const nombre = document.getElementById("nombre").value.trim();
+      if (nombre && !participantes.includes(nombre)) {
+        participantes.push(nombre);
+        const li = document.createElement("li");
+        li.textContent = nombre;
+        document.getElementById("listaParticipantes").appendChild(li);
+        document.getElementById("nombre").value = "";
+        if (participantes.length >= 2) {
+          document.getElementById("btnIniciarGrupos").disabled = false;
+        }
+      }
+    }
 
-            <!-- Sección para mostrar al campeón -->
-            <div class="winner-section">
-                <h3 id="campeonDisplay"></h3>
-            </div>
-        </section>
+    function iniciarGrupos() {
+      document.getElementById("inscripcion").style.display = "none";
+      document.getElementById("grupos").style.display = "block";
+      partidos = [];
+      for (let i = 0; i < participantes.length; i++) {
+        for (let j = i + 1; j < participantes.length; j++) {
+          partidos.push([participantes[i], participantes[j]]);
+        }
+      }
+      actualizarPartidos();
+      participantes.forEach(p => resultados[p] = {pts: 0, v: 0, d: 0});
+    }
 
-    </div> <!-- Cierre de .container -->
+    function actualizarPartidos() {
+      const contenedor = document.getElementById("partidos");
+      contenedor.innerHTML = "";
+      partidos.forEach((p, i) => {
+        const div = document.createElement("div");
+        div.className = "match";
+        div.innerHTML = `${p[0]} vs ${p[1]} 
+          <button onclick="registrarVictoria(${i}, 0)">Gana ${p[0]}</button>
+          <button onclick="registrarVictoria(${i}, 1)">Gana ${p[1]}</button>`;
+        contenedor.appendChild(div);
+      });
+    }
 
-    <!-- El script principal que maneja toda la lógica -->
-    <script src="script.js"></script>
+    function registrarVictoria(index, ganador) {
+      const [p1, p2] = partidos[index];
+      const ganadorNombre = ganador === 0 ? p1 : p2;
+      const perdedorNombre = ganador === 0 ? p2 : p1;
+      resultados[ganadorNombre].pts += 2;
+      resultados[ganadorNombre].v += 1;
+      resultados[perdedorNombre].d += 1;
+      partidos.splice(index, 1);
+      actualizarPartidos();
+      actualizarTabla();
+      if (partidos.length === 0) {
+        document.getElementById("btnEliminatorias").disabled = false;
+      }
+    }
+
+    function actualizarTabla() {
+      const cuerpo = document.getElementById("tablaPosiciones");
+      cuerpo.innerHTML = "";
+      const ordenados = Object.entries(resultados).sort((a,b) => b[1].pts - a[1].pts);
+      ordenados.forEach(([nombre, stats], i) => {
+        const row = `<tr><td>${i+1}</td><td>${nombre}</td><td>${stats.pts}</td><td>${stats.v}</td><td>${stats.d}</td></tr>`;
+        cuerpo.innerHTML += row;
+      });
+    }
+
+    function iniciarEliminatorias() {
+      document.getElementById("grupos").style.display = "none";
+      document.getElementById("eliminatorias").style.display = "block";
+      clasificados = Object.entries(resultados)
+        .sort((a,b) => b[1].pts - a[1].pts)
+        .map(([nombre]) => nombre);
+
+      const bracket = document.getElementById("bracket");
+      bracket.innerHTML = "";
+
+      while (clasificados.length % 2 !== 0) clasificados.pop();
+
+      const ronda = document.createElement("div");
+      ronda.className = "ronda";
+      ronda.innerHTML = "<h3>Ronda 1</h3>";
+
+      for (let i = 0; i < clasificados.length; i += 2) {
+        const box = document.createElement("div");
+        box.className = "box";
+        const p1 = clasificados[i];
+        const p2 = clasificados[i + 1];
+        box.innerHTML = `${p1} vs ${p2}<br>
+          <button onclick="avanzarRonda('${p1}', this)">Gana ${p1}</button>
+          <button onclick="avanzarRonda('${p2}', this)">Gana ${p2}</button>`;
+        ronda.appendChild(box);
+      }
+      bracket.appendChild(ronda);
+    }
+
+    function avanzarRonda(ganador, boton) {
+      const box = boton.parentElement;
+      box.innerHTML = `Ganador: ${ganador}`;
+      box.classList.add("ganador");
+
+      const rondaActual = box.parentElement;
+      const bracket = document.getElementById("bracket");
+
+      let siguienteRonda = rondaActual.nextElementSibling;
+      if (!siguienteRonda) {
+        siguienteRonda = document.createElement("div");
+        siguienteRonda.className = "ronda";
+        siguienteRonda.innerHTML = `<h3>Siguiente Ronda</h3>`;
+        bracket.appendChild(siguienteRonda);
+      }
+
+      const boxes = rondaActual.querySelectorAll(".ganador");
+      if (boxes.length % 2 === 0) {
+        const ganadores = Array.from(boxes).map(b => b.textContent.replace("Ganador: ", ""));
+        siguienteRonda.innerHTML = `<h3>Siguiente Ronda</h3>`;
+        for (let i = 0; i < ganadores.length; i += 2) {
+          const b = document.createElement("div");
+          b.className = "box";
+          const a = ganadores[i];
+          const b2 = ganadores[i + 1];
+          if (!b2) {
+            b.innerHTML = `🏆 CAMPEÓN: ${a}`;
+            b.classList.add("ganador");
+          } else {
+            b.innerHTML = `${a} vs ${b2}<br>
+              <button onclick="avanzarRonda('${a}', this)">Gana ${a}</button>
+              <button onclick="avanzarRonda('${b2}', this)">Gana ${b2}</button>`;
+          }
+          siguienteRonda.appendChild(b);
+        }
+      }
+    }
+  </script>
 </body>
 </html>
