--- a/bentorneos/index.html
+++ b/bentorneos/index.html
@@ -178,20 +178,40 @@
       });
     }
 
-    function registrarVictoria(index, ganador) {
-      const [p1, p2] = partidos[index];
-      const ganadorNombre = ganador === 0 ? p1 : p2;
-      const perdedorNombre = ganador === 0 ? p2 : p1;
-      resultados[ganadorNombre].pts += 2;
-      resultados[ganadorNombre].v += 1;
-      resultados[perdedorNombre].d += 1;
-      partidos.splice(index, 1);
-      actualizarPartidos();
-      actualizarTabla();
-      if (partidos.length === 0 && esPotenciaDeDos(participantes.length)) {
-        document.getElementById("btnEliminatorias").disabled = false;
-      }
+  function registrarVictoria(index, ganador) {
+  const [p1, p2] = partidos[index];
+  const ganadorNombre = ganador === 0 ? p1 : p2;
+  const perdedorNombre = ganador === 0 ? p2 : p1;
+  resultados[ganadorNombre].pts += 2;
+  resultados[ganadorNombre].v += 1;
+  resultados[perdedorNombre].d += 1;
+  partidos.splice(index, 1);
+  actualizarPartidos();
+  actualizarTabla();
+
+  if (partidos.length === 0) {
+    const cantidad = participantes.length;
+    let maxClasificados = 1;
+    while (maxClasificados * 2 <= cantidad) {
+      maxClasificados *= 2;
     }
+
+    if (maxClasificados >= 2) {
+      document.getElementById("btnEliminatorias").disabled = false;
+    }
+
+    // Mostrar quiénes fueron eliminados
+    const ordenados = Object.entries(resultados).sort((a,b) => b[1].pts - a[1].pts).map(e => e[0]);
+    const eliminados = ordenados.slice(maxClasificados);
+    if (eliminados.length > 0) {
+      alert("Participantes eliminados por exceso:\n" + eliminados.map(e => " - " + e).join("\n"));
+    }
+
+    // Filtrar resultados a solo los mejores clasificados
+    participantes = ordenados.slice(0, maxClasificados);
+  }
+}
+
 
     function actualizarTabla() {
       const cuerpo = document.getElementById("tablaPosiciones");
