--- a/inventario-ventas/index.html
+++ b/inventario-ventas/index.html
@@ -2,8 +2,8 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Inventario de Ventas</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Inventario de Ventas - Editar y Eliminar</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -30,6 +30,19 @@
       margin: 5px 0;
       padding: 10px;
       border: 1px solid #ddd;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .acciones button {
+      margin-left: 8px;
+      padding: 6px 10px;
+      font-size: 14px;
+      cursor: pointer;
+    }
+    .editar-inputs input {
+      width: 150px;
+      margin-right: 10px;
     }
   </style>
 </head>
@@ -39,7 +52,7 @@
 
   <form id="formulario">
     <input type="text" id="nombre" placeholder="Nombre del producto" required />
-    <input type="number" id="cantidad" placeholder="Cantidad" required />
+    <input type="number" id="cantidad" placeholder="Cantidad" required min="0" />
     <button type="submit">Agregar al inventario</button>
   </form>
 
@@ -50,7 +63,7 @@
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js"></script>
 
   <script>
-    // Tu configuración Firebase
+    // Configuración Firebase
     const firebaseConfig = {
       apiKey: "AIzaSyBqjHiWsBnK0AVUpE4arVqHmTI2B1udwaI",
       authDomain: "inventario-ventas-c8c69.firebaseapp.com",
@@ -64,7 +77,6 @@
     const app = firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
-    // Referencias
     const form = document.getElementById("formulario");
     const lista = document.getElementById("lista");
 
@@ -73,20 +85,96 @@
       e.preventDefault();
       const nombre = document.getElementById("nombre").value.trim();
       const cantidad = parseInt(document.getElementById("cantidad").value);
-
       if (nombre && cantidad >= 0) {
         await db.collection("productos").add({ nombre, cantidad });
         form.reset();
       }
     });
 
-    // Mostrar productos en tiempo real
+    // Mostrar productos y manejar edición/eliminación
     db.collection("productos").onSnapshot((snapshot) => {
       lista.innerHTML = "";
       snapshot.forEach((doc) => {
         const item = doc.data();
+        const id = doc.id;
+
         const li = document.createElement("li");
-        li.textContent = `${item.nombre} - Cantidad: ${item.cantidad}`;
+        li.dataset.id = id;
+
+        // Contenedor para texto o inputs de edición
+        const contenido = document.createElement("div");
+        contenido.classList.add("contenido");
+
+        // Mostrar normal
+        const texto = document.createElement("span");
+        texto.textContent = `${item.nombre} - Cantidad: ${item.cantidad}`;
+        contenido.appendChild(texto);
+
+        // Contenedor botones acciones
+        const acciones = document.createElement("div");
+        acciones.classList.add("acciones");
+
+        // Botón editar
+        const btnEditar = document.createElement("button");
+        btnEditar.textContent = "Editar";
+        btnEditar.onclick = () => {
+          contenido.innerHTML = "";
+
+          const inputNombre = document.createElement("input");
+          inputNombre.type = "text";
+          inputNombre.value = item.nombre;
+
+          const inputCantidad = document.createElement("input");
+          inputCantidad.type = "number";
+          inputCantidad.min = 0;
+          inputCantidad.value = item.cantidad;
+
+          const btnGuardar = document.createElement("button");
+          btnGuardar.textContent = "Guardar";
+
+          const btnCancelar = document.createElement("button");
+          btnCancelar.textContent = "Cancelar";
+
+          contenido.appendChild(inputNombre);
+          contenido.appendChild(inputCantidad);
+          contenido.appendChild(btnGuardar);
+          contenido.appendChild(btnCancelar);
+
+          btnGuardar.onclick = async () => {
+            const nuevoNombre = inputNombre.value.trim();
+            const nuevaCantidad = parseInt(inputCantidad.value);
+            if (nuevoNombre && nuevaCantidad >= 0) {
+              await db.collection("productos").doc(id).update({
+                nombre: nuevoNombre,
+                cantidad: nuevaCantidad
+              });
+            }
+          };
+
+          btnCancelar.onclick = () => {
+            // Volver a mostrar el texto original
+            contenido.innerHTML = "";
+            contenido.appendChild(texto);
+          };
+
+          // Para evitar que se dispare otra acción al pulsar botones
+          return false;
+        };
+
+        // Botón eliminar
+        const btnEliminar = document.createElement("button");
+        btnEliminar.textContent = "Eliminar";
+        btnEliminar.onclick = async () => {
+          if (confirm(`¿Eliminar "${item.nombre}"?`)) {
+            await db.collection("productos").doc(id).delete();
+          }
+        };
+
+        acciones.appendChild(btnEditar);
+        acciones.appendChild(btnEliminar);
+
+        li.appendChild(contenido);
+        li.appendChild(acciones);
         lista.appendChild(li);
       });
     });
