--- a/inventario-ventas/index.html
+++ b/inventario-ventas/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="favicon.ico">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css"> <!-- Ruta correcta a CSS -->
 </head>
 <body>
     <header>
@@ -65,11 +65,11 @@
         <p>© 2023 Tu Nombre / Nombre de tu Proyecto</p>
     </footer>
 
-    <script type="module" src="js/app.js"></script>
+    <script type="module" src="js/app.js"></script> <!-- Ruta correcta a App JS -->
 
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/js/sw.js')
+            navigator.serviceWorker.register('/js/sw.js') // Ruta correcta a SW JS
                 .then(function(registration) {
                     console.log('Service Worker registrado con éxito:', registration.scope);
                 })
