--- a/inventario-ventas/index.html
+++ b/inventario-ventas/index.html
@@ -72,7 +72,7 @@
     </main>
 
     <footer>
-        <p>© 2023 Tu Nombre / Nombre de tu Proyecto</p>
+        <p>© 2025 m2aq / Inventario Online </p>
     </footer>
 
     <!-- Script principal -->
